# rattler-build

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  ISSUES_REPORT.md  README.md  RELEASE.md  SECURITY.md  book.toml  build.sh  cliff.toml  clippy.toml  deny.toml  environment_linux.yaml  index.html  latest  lefthook.yaml  mkdocs.yml  out.json  pixi.toml  pytest.ini  recipe.yaml  release-plz.toml  tbump.toml  typos.toml  versions.json  work-order-s3-publish-cli-flags.md  zizmor.yml
crates/rattler_build_allocator/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_allocator/src/: lib.rs
crates/rattler_build_core/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_core/src/: build.rs  bump_recipe.rs  console_utils.rs  consts.rs  debug.rs  env_vars.rs  lib.rs  metadata.rs  package_info.rs  packaging.rs  publish.rs  script.rs  staging.rs  system_tools.rs  tool_configuration.rs  utils.rs
crates/rattler_build_diffy/: Cargo.toml  README.md
crates/rattler_build_diffy/src/: apply.rs  lib.rs  line_end.rs  range.rs  utils.rs
crates/rattler_build_docs/: Cargo.toml  README.md
crates/rattler_build_docs/src/: main.rs
crates/rattler_build_jinja/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_jinja/src/: ast_variables.rs  env.rs  git.rs  jinja.rs  lib.rs  utils.rs  variable.rs
crates/rattler_build_networking/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_networking/src/: lib.rs
crates/rattler_build_package/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_package/examples/: simple_package.rs
crates/rattler_build_package/src/: builder.rs  error.rs  lib.rs
crates/rattler_build_package/tests/: integration_test.rs
crates/rattler_build_playground/: Cargo.toml  build.sh
crates/rattler_build_playground/src/: lib.rs
crates/rattler_build_playground/www/: app.js  index.html  style.css
crates/rattler_build_recipe/: CHANGELOG.md  Cargo.toml  MIETTE_ERRORS.md  README.md
crates/rattler_build_recipe/examples/: README.md  advanced_build_recipe.yaml  build_recipe.yaml  compiler_recipe.yaml  complete_build_recipe.yaml  parse_recipe.rs  simple_recipe.yaml  source_example.yaml  test_recipe.yaml
crates/rattler_build_recipe/src/: error.rs  lib.rs  pkl.rs  source_code.rs  span.rs  variant_render.rs
crates/rattler_build_recipe/test-data/: binary_relocation_template.yaml  complex.yaml  conditional_source.yaml  conditional_tests.yaml  conditionals.yaml  full.yaml  license_files.yaml  minimal.yaml  multi_output_conditionals.yaml  multi_output_full.yaml  multi_output_minimal.yaml  multi_output_overwrite_license.yaml  multi_output_templates.yaml  multi_output_top_level_inherit.yaml  nested_conditionals.yaml  run_exports.yaml  script.yaml  script_content_list.yaml  subpackages_basic.yaml  templates.yaml  used_vars_in_scripts.yaml  version_independent_template.yaml
crates/rattler_build_recipe/tests/: integration_test.rs  source_parsing_test.rs  test_backwards_compatibility.rs  test_entry_points.rs  test_real_world_tests_yaml.rs
crates/rattler_build_recipe_generator/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_recipe_generator/src/: cpan.rs  cran.rs  lib.rs  pypi.rs  pyproject.rs  serialize.rs
crates/rattler_build_script/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_script/src/: activation.rs  execution.rs  execution_context.rs  lib.rs  runtime.rs  sandbox.rs  script.rs
crates/rattler_build_script/tests/: serialization_tests.rs
crates/rattler_build_source_cache/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_source_cache/src/: builder.rs  cache.rs  content_hash.rs  error.rs  index.rs  lib.rs  lock.rs  sigstore.rs  source.rs  tests.rs
crates/rattler_build_types/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_types/src/: late_bound_path.rs  lib.rs  pin.rs
crates/rattler_build_variant_config/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_variant_config/src/: combination.rs  conda_build_config.rs  config.rs  error.rs  evaluate.rs  lib.rs  normalized_key.rs  parser.rs  stage0_types.rs  variable.rs  variable_converter.rs  yaml_parser.rs
crates/rattler_build_variant_config/tests/: error_tests.rs  integration_tests.rs
crates/rattler_build_yaml_parser/: CHANGELOG.md  Cargo.toml  README.md
crates/rattler_build_yaml_parser/src/: error.rs  (+9 more)
crates/rattler_git/: Cargo.toml
py-rattler-build/: .gitignore  CLAUDE.md  Cargo.toml  README.md  pixi.toml  pyproject.toml
py-rattler-build/.zed/: settings.json
py-rattler-build/examples/: basic.py  build_simple.py  build_with_progress.py  test_with_progress.py
py-rattler-build/notebooks/: 1-recipe_rendering_basics.py  2-advanced_variants_and_jinja.py  2-multi_output_and_staging.py  3-multi_output_and_staging.py  3-package_inspection_and_testing.py  debug_session.ipynb  exploration.py  inspecting_built_packages.ipynb  multi_output.py  multi_output_and_staging.ipynb  package_assembly.ipynb  package_inspection_and_testing.ipynb  recipe_rendering_basics.ipynb  staging_output.py
py-rattler-build/rattler_build/: __init__.py  build_configuration.py  build_types.py  cli_api.py  config.py  debug.py  directories.py  jinja_config.py  packaging_settings.py  platform_types.py  progress.py  recipe.py  recipe_generation.py  render.py  sandbox_config.py  stage0.py  stage1.py  test_configuration.py  tool_config.py  variant_config.py
py-rattler-build/rust/: Cargo.toml
py-rattler-build/scripts/: run_all_notebooks.py
py-rattler-build/src/: build_configuration.rs  build_types.rs  cli_api.rs  debug.rs  directories.rs  error.rs  jinja_config.rs  lib.rs  output.rs  packaging_settings.rs  platform_types.rs  progress_callback.rs  recipe_generation.rs  render.rs  sandbox_config.rs  stage0.rs  stage1.rs  test_configuration.rs  tool_config.rs  tracing_subscriber.rs  upload.rs  variant_config.rs
rattler-build-tests/: Cargo.toml
rattler-build-tests/src/: main.rs  tests.rs  utils.rs
rust-tests/: Cargo.toml
rust-tests/src/: lib.rs  test.rs
(+6904 files in other folders)
