[package]
name = "rattler-build"
version = "0.58.2"
authors = ["rattler-build contributors <hi@prefix.dev>"]
repository = "https://github.com/prefix-dev/rattler-build"
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
description = "A fast CLI tool to build conda packages on Windows, macOS and Linux"
documentation = "https://prefix-dev.github.io/rattler-build"
default-run = "rattler-build"
rust-version = "1.89.0"

[workspace]
members = [
  "rust-tests",
  "crates/rattler_git",
  "crates/rattler_build_networking",
  "crates/rattler_build_source_cache",
  "crates/rattler_build_recipe_generator",
  "crates/rattler_prefix_guard",
  "crates/rattler_build_recipe",
  "crates/rattler_build_types",
  "crates/rattler_build_jinja",
  "crates/rattler_build_script",
  "crates/rattler_build_yaml_parser",
  "crates/rattler_build_allocator",
  "crates/rattler_build_package",
]
exclude = ["crates/rattler_build_playground"]

[workspace.package]
authors = ["rattler-build contributors <hi@prefix.dev>"]
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/prefix-dev/rattler-build"

[workspace.dependencies]
async-once-cell = "0.5.4"
async-recursion = "1.1.1"
async-trait = "0.1"
bzip2 = "0.6.1"
chrono = "0.4.42"
clap = { version = "4.5.57", features = ["derive"] }
dashmap = "6.1"
dunce = "1.0.5"
console = { version = "0.16.1", features = ["windows-console-colors"] }
flate2 = "1.1.9"
fs-err = "3.2.2"
futures = "0.3.31"
globset = "0.4.16"
indexmap = "2.13.0"
indicatif = "0.18.0"
insta = "1.46.3"
itertools = "0.14.0"
hex = "0.4.3"
libc = "0.2"
md-5 = "0.10"
lazy_static = "1.5.0"
miette = "7.6.0"
minijinja = { version = "2.15.1", features = [
  "unstable_machinery",
  "custom_syntax",
] }
rattler_conda_types = { version = "0.43.5", default-features = false }
rattler_digest = { version = "1.2.2", default-features = false, features = [
  "serde",
] }
rattler_build_types = { path = "crates/rattler_build_types" }
rattler_build_jinja = { path = "crates/rattler_build_jinja" }
rattler_build_recipe = { path = "crates/rattler_build_recipe" }
rattler_networking = { version = "0.26.2", default-features = false }
rattler_package_streaming = { version = "0.24.2", default-features = false }
rattler_shell = { version = "0.26.2", default-features = false, features = [
  "sysinfo",
] }
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
serde-value = "0.7.0"
sevenz-rust2 = "0.20.0"
sha2 = "0.10.9"
strum = "0.27.2"
tar = "0.4.44"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tokio-util = { version = "0.7.17", features = ["codec", "compat"] }
toml = "0.9.11"
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1"
walkdir = "2.5.0"
which = "8.0.0"
windows-sys = "0.59"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
spdx = "0.12.0"
pathdiff = "0.2.3"
marked-yaml = "0.8.0"
rstest = "0.26.1"
petgraph = { version = "0.8.3", default-features = false }
sha1 = { version = "0.10.6" }
lzma-rust2 = { version = "0.15", features = ["xz"] }
sigstore-verify = { version = "0.6.3", default-features = false }
sigstore-trust-root = { version = "0.6.3", default-features = false }
sigstore-types = { version = "0.6.3" }

anyhow = "1.0.102"
content_inspector = "0.2.4"
memchr = "2.8.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
serial_test = "3.4.0"
rattler_build_networking = { path = "crates/rattler_build_networking" }
rattler_build_script = { path = "crates/rattler_build_script", default-features = false }
rattler_build_variant_config = { path = "crates/rattler_build_variant_config" }
rattler_build_yaml_parser = { path = "crates/rattler_build_yaml_parser" }
rattler_git = { path = "crates/rattler_git" }
rattler_prefix_guard = { path = "crates/rattler_prefix_guard" }

[features]
default = ['rustls-tls', 'recipe-generation', 's3', 'sigstore']
# Enable optimized memory allocators for release builds.
# This provides significant performance improvements, especially on Linux musl.
# Disabled by default due to increased compile time.
performance = ["rattler_build_allocator"]
native-tls = [
  'reqwest/native-tls',
  'rattler/native-tls',
  'rattler_repodata_gateway/native-tls',
  'rattler_networking/native-tls',
  'rattler_package_streaming/native-tls',
  'rattler_index/native-tls',
  'rattler_redaction/native-tls',
  'rattler_upload/native-tls',
  'rattler_build_networking/native-tls',
  'rattler_build_source_cache/native-tls',
  'rattler_build_recipe_generator?/native-tls',
  'http-range-client/default-tls',
]
rustls-tls = [
  'reqwest/rustls-tls',
  'reqwest-middleware/rustls-tls',
  'reqwest/rustls-tls-native-roots',
  'rattler/rustls-tls',
  'rattler_repodata_gateway/rustls-tls',
  'rattler_networking/rustls-tls',
  'rattler_package_streaming/rustls-tls',
  'rattler_index/rustls-tls',
  'rattler_redaction/rustls-tls',
  'rattler_upload/rustls-tls',
  'rattler_build_networking/rustls-tls',
  'rattler_build_source_cache/rustls-tls',
  'rattler_build_recipe_generator?/rustls-tls',
  'http-range-client/rustls-tls',
]
tui = [
  'ratatui',
  'crossterm',
  'ansi-to-tui',
  'throbber-widgets-tui',
  'tui-input',
]
s3 = [
  'rattler_networking/s3',
  'rattler_upload/s3',
  'rattler_index/s3',
  'dep:rattler_s3',
]
sigstore = ['rattler_upload/sigstore-sign']
recipe-generation = ["rattler_build_recipe_generator"]
# This feature needs to add a dependency on
# clap-markdown = { git = "https://github.com/ruben-arts/clap-markdown", branch = "main" }
# but in order to be able to publish to crates we remove this feature
generate-cli-docs = []
patch-test-extra = []

[[bin]]
name = "rattler-build"
required-features = ["recipe-generation"]

[[bin]]
name = "patch-apply-gen-test-data"
path = "./scripts/patch-apply-gen-test-data.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde-untagged = "0.1.9"
anyhow = { workspace = true }
walkdir = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
] }
itertools = { workspace = true }
content_inspector = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["env", "cargo", "suggestions"] }
minijinja = { workspace = true }
# Ansi colored logging using tracing subscriber is broken since 0.3.20. Rattler-build doesnt really
# care about this because it uses a custom formatter. However, downstream packages might care,
# therefor we explicitly loosen the bounds on tracing-subscriber.
# See: https://github.com/tokio-rs/tracing/issues/3378
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "ansi",
  "json",
] }
# marked-yaml = { version = "0.8.0" }
miette = { workspace = true, features = ["fancy"] }
num_cpus = "1.17.0"
goblin = "0.10.4"
scroll = "0.13.0"
pathdiff = { workspace = true }
comfy-table = "7.2.2"
futures = { workspace = true }
indicatif = { workspace = true, features = ["in_memory"] }
console = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
spdx = { workspace = true }
ignore = "0.4.25"
globset = { workspace = true }
text-stub-library = "0.9.0"
clap-verbosity-flag = "3.0.4"
tracing-core = "0.1.36"
indexmap = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true }
which = { workspace = true }
clap_complete = "4.5.65"
clap_complete_nushell = "4.5.10"
tokio-util = { workspace = true }
flickzeug = { version = "0.5.1" }
toml = { workspace = true }
memmap2 = { workspace = true }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
async-once-cell = { workspace = true }
terminal_size = "0.4.3"
memchr = { workspace = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
ansi-to-tui = { version = "7.0.0", optional = true }
throbber-widgets-tui = { version = "0.8", optional = true }
tui-input = { version = "0.14.0", optional = true }
reflink-copy = "0.1.28"
rayon = { workspace = true }
regex = { workspace = true }
async-recursion = { workspace = true }

# Rattler crates
rattler_config = { version = "0.3.2" }
rattler = { version = "0.39.15", default-features = false, features = [
  "cli-tools",
  "indicatif",
] }
rattler_cache = { version = "0.6.14", default-features = false }
rattler_conda_types = { workspace = true, features = ["rayon"] }
rattler_digest = { workspace = true }
rattler_index = { version = "0.27.16", default-features = false }
rattler_networking = { workspace = true, features = ["rattler_config"] }
rattler_upload = { version = "0.4.15", default-features = false }
rattler_s3 = { version = "0.1.25", optional = true }
rattler_redaction = { version = "0.1.13", default-features = false }
rattler_repodata_gateway = { version = "0.26.2", default-features = false, features = [
  "gateway",
] }
rattler_shell = { version = "0.26.2", default-features = false, features = [
  "sysinfo",
] }
rattler_prefix_guard = { workspace = true }
rattler_solve = { version = "4.2.6", default-features = false, features = [
  "resolvo",
  "serde",
] }
rattler_virtual_packages = { version = "2.3.11", default-features = false }
rattler_package_streaming = { workspace = true, default-features = false }
rattler_menuinst = "0.2.49"
lazy_static = { workspace = true }
reqwest-retry = "0.8.0"
retry-policies = "0.5.1"
strum = "0.27.2"
unicode-normalization = "0.1.25"
line-ending = "1.5.1"
http-range-client = { version = "0.9.1", default-features = false, features = [
  "reqwest-sync",
] }
sevenz-rust2 = { workspace = true }
dialoguer = "0.12.0"

# Local rattler-build crates
rattler_build_recipe_generator = { path = "crates/rattler_build_recipe_generator", optional = true, default-features = false, features = [
  "cli",
] }
rattler_build_types = { workspace = true }
rattler_build_variant_config = { workspace = true, features = ["parser"] }
rattler_build_jinja = { workspace = true }
rattler_build_recipe = { workspace = true, features = ["variant-config"] }
rattler_git = { workspace = true }
rattler_build_networking = { workspace = true, features = ["middleware"] }
rattler_build_source_cache = { path = "crates/rattler_build_source_cache", default-features = false }
rattler_build_script = { workspace = true, features = ["execution"] }
rattler_build_allocator = { path = "crates/rattler_build_allocator", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "filters"] }
rstest = { workspace = true }
tracing-test = "0.2.5"
tracing-indicatif = "0.3.13"
serial_test = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }
pretty_assertions = "1.4.1"


[[bench]]
name = "parse_file"
harness = false

[patch.crates-io]
# rattler = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_sandbox = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_cache = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_conda_types = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_digest = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_index = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_networking = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_repodata_gateway = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_shell = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_solve = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_redaction = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_virtual_packages = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_package_streaming = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_menuinst = { git = "https://github.com/conda/rattler", branch = "main" }
