[package]
name = "rattler-build"
version = "0.63.1"
authors = ["rattler-build contributors <hi@prefix.dev>"]
repository = "https://github.com/prefix-dev/rattler-build"
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
description = "A fast CLI tool to build conda packages on Windows, macOS and Linux"
documentation = "https://prefix-dev.github.io/rattler-build"
default-run = "rattler-build"
rust-version = "1.89.0"
publish = true

[workspace]
members = [
  "crates/rattler_build_core",
  "crates/rattler_build_networking",
  "crates/rattler_build_source_cache",
  "crates/rattler_build_recipe_generator",
  "crates/rattler_build_recipe",
  "crates/rattler_build_types",
  "crates/rattler_build_jinja",
  "crates/rattler_build_script",
  "crates/rattler_build_yaml_parser",
  "crates/rattler_build_variant_config",
  "crates/rattler_build_allocator",
  "crates/rattler_build_package",
  "crates/rattler_build_docs",
]
exclude = ["crates/rattler_build_playground"]

[workspace.package]
authors = ["rattler-build contributors <hi@prefix.dev>"]
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/prefix-dev/rattler-build"

[workspace.dependencies]
arwen-codesign = "0.0.1-alpha.1"
async-once-cell = "0.5.4"
async-recursion = "1.1.1"
async-trait = "0.1"
bzip2 = "0.6.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dashmap = "6.1"
dunce = "1.0.5"
console = { version = "0.16.3", features = ["windows-console-colors"] }
flate2 = "1.1.9"
fs-err = "3.3.0"
futures = "0.3.32"
globset = "0.4.18"
indexmap = "2.13.0"
indicatif = "0.18.4"
insta = "1.46.3"
itertools = "0.14.0"
hex = "0.4.3"
libc = "0.2"
md-5 = "0.10"
lazy_static = "1.5.0"
miette = "7.6.0"
minijinja = { version = "2.18.0", features = [
  "unstable_machinery",
  "custom_syntax",
] }
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.8.0"
retry-policies = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
serde_yaml = "0.9.34"
serde-value = "0.7.0"
sevenz-rust2 = "0.20.2"
sha2 = "0.10.9"
strum = "0.28.0"
tar = "0.4.44"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec", "compat"] }
toml = "1.0.7"
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1"
walkdir = "2.5.0"
which = "8.0.2"
windows-sys = "0.61"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
spdx = "0.13.4"
pathdiff = "0.2.3"
marked-yaml = "0.8.0"
rstest = "0.26.1"
petgraph = { version = "0.8.3", default-features = false }
sha1 = { version = "0.10.6" }
lzma-rust2 = { version = "0.16", features = ["xz"] }
line-ending = "1.5.1"
anyhow = "1.0.102"
content_inspector = "0.2.4"
memchr = "2.8.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
serial_test = "3.4.0"
unicode-normalization = "0.1.25"

# Dependencies used in subcrates (workspace-level)
clap-verbosity-flag = "3.0.4"
comfy-table = "7.2.2"
flickzeug = "0.5.1"
goblin = "0.10.5"
ignore = "0.4.25"
num_cpus = "1.17.0"
pretty_assertions = "1.4.1"
reflink-copy = "0.1.29"
scroll = "0.13.0"
serde-untagged = "0.1.9"
terminal_size = "0.4.3"
text-stub-library = "0.9.0"
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "ansi",
  "json",
] }
tracing-test = "0.2.6"

# rattler crates
# Rattler crates
rattler_conda_types = { version = "0.46.0", default-features = false }
rattler_digest = { version = "1.2.3", default-features = false, features = [
  "serde",
] }
rattler_networking = { version = "0.26.8", default-features = false }
rattler_package_streaming = { version = "0.25.0", default-features = false }
rattler_shell = { version = "0.26.8", default-features = false, features = [
  "sysinfo",
] }
rattler_git = { version = "0.1.1" }
rattler_prefix_guard = { version = "0.1.0" }

rattler_config = { version = "0.3.8" }
rattler = { version = "0.41.0", default-features = false, features = [
  "cli-tools",
  "indicatif",
] }
rattler_cache = { version = "0.7.0", default-features = false }
rattler_index = { version = "0.28.0", default-features = false }
rattler_upload = { version = "0.6.0", default-features = false }
rattler_s3 = { version = "0.1.31" }
rattler_redaction = { version = "0.1.13", default-features = false }
rattler_repodata_gateway = { version = "0.28.0", default-features = false, features = [
  "gateway",
] }
rattler_solve = { version = "6.0.0", default-features = false, features = [
  "resolvo",
  "serde",
] }
rattler_virtual_packages = { version = "2.3.17", default-features = false }
rattler_menuinst = "0.2.55"


# Internal rattler-build crates
rattler_build_allocator = { path = "crates/rattler_build_allocator", version = "=0.1.1" }
rattler_build_core = { path = "crates/rattler_build_core", version = "=0.2.4", default-features = false }
rattler_build_jinja = { path = "crates/rattler_build_jinja", version = "=0.1.6" }
rattler_build_networking = { path = "crates/rattler_build_networking", version = "=0.1.5" }
rattler_build_recipe = { path = "crates/rattler_build_recipe", version = "=0.1.6" }
rattler_build_recipe_generator = { path = "crates/rattler_build_recipe_generator", version = "=0.1.5", default-features = false }
rattler_build_script = { path = "crates/rattler_build_script", version = "=0.2.3", default-features = false }
rattler_build_source_cache = { path = "crates/rattler_build_source_cache", version = "=0.1.5", default-features = false }
rattler_build_types = { path = "crates/rattler_build_types", version = "=0.1.6" }
rattler_build_variant_config = { path = "crates/rattler_build_variant_config", version = "=0.1.6" }
rattler_build_yaml_parser = { path = "crates/rattler_build_yaml_parser", version = "=0.1.6" }

[features]
default = ['rustls-tls', 'recipe-generation', 's3', 'sigstore']
# Enable optimized memory allocators for release builds.
# This provides significant performance improvements, especially on Linux musl.
# Disabled by default due to increased compile time.
performance = ["rattler_build_allocator"]
native-tls = [
  'rattler_build_core/native-tls',
  'rattler_build_recipe_generator?/native-tls',
  'http-range-client/default-tls',
]
rustls-tls = [
  'rattler_build_core/rustls-tls',
  'rattler_build_recipe_generator?/rustls-tls',
  'http-range-client/rustls-tls',
]
s3 = ['rattler_build_core/s3']
sigstore = ['rattler_build_core/sigstore']
recipe-generation = ["rattler_build_recipe_generator"]
patch-test-extra = []

[[bin]]
name = "rattler-build"
required-features = ["recipe-generation"]

[[bin]]
name = "patch-apply-gen-test-data"
path = "./scripts/patch-apply-gen-test-data.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
] }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["env", "cargo", "suggestions"] }
minijinja = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
num_cpus = { workspace = true }
comfy-table = { workspace = true }
futures = { workspace = true }
console = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
clap-verbosity-flag = { workspace = true }
indexmap = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true }
clap_complete = "4.6.0"
clap_complete_nushell = "4.6.0"
tokio-util = { workspace = true }
memmap2 = { workspace = true }
dialoguer = "0.12.0"
http-range-client = { version = "0.9.1", default-features = false, features = [
  "reqwest-sync",
] }

# Rattler crates
rattler = { workspace = true }
rattler_config = { workspace = true }
rattler_conda_types = { workspace = true, features = ["rayon"] }
rattler_digest = { workspace = true }
rattler_index = { workspace = true }
rattler_networking = { workspace = true, features = ["rattler_config"] }
rattler_package_streaming = { workspace = true, default-features = false }
rattler_repodata_gateway = { workspace = true }
rattler_upload = { workspace = true }
rattler_solve = { workspace = true }
rattler_virtual_packages = { workspace = true }

# Local rattler-build crates
rattler_build_core = { workspace = true }
rattler_build_recipe_generator = { workspace = true, optional = true, features = [
  "cli",
] }
rattler_build_types = { workspace = true }
rattler_build_variant_config = { workspace = true, features = ["parser"] }
rattler_build_recipe = { workspace = true, features = ["variant-config"] }
rattler_build_script = { workspace = true, features = ["execution"] }
rattler_build_allocator = { workspace = true, optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "filters"] }
rstest = { workspace = true }
tracing-test = { workspace = true }
tracing-indicatif = "0.3"
serial_test = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }
pretty_assertions = { workspace = true }


[[bench]]
name = "parse_file"
harness = false

[patch.crates-io]
# rattler = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_sandbox = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_cache = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_conda_types = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_digest = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_index = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_networking = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_repodata_gateway = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_shell = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_solve = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_redaction = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_virtual_packages = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_package_streaming = { git = "https://github.com/conda/rattler", branch = "main" }
# rattler_menuinst = { git = "https://github.com/conda/rattler", branch = "main" }
