[package]
name = "py-rattler-build"
version = "0.34.1"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler_build"
crate-type = ["cdylib"]

[features]
default = ["rustls-tls"]
native-tls = ["rattler-build/native-tls"]
rustls-tls = ["rattler-build/rustls-tls"]

[dependencies]
rattler-build = { path = "../" }
pyo3 = { version = "0.23.2", features = [
  "abi3-py38",
  "extension-module",
  "multiple-pymethods",
] }
tokio = { version = "1.43.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
] }
# pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }

[build-dependencies]
pyo3-build-config = "0.23.2"


[patch.crates-io]
zip = { git = "https://github.com/wolfv/zip2", branch = "patched" }

# Prevent package from thinking it's in the workspace
[workspace]
